[package]
name = "RsMarkdownServer"
version = "0.1.0"
authors = ["Will Hart <hart.wl@gmail.com>"]
edition = "2018"

[dependencies]
glob = "0.2"
rocket = "0.4.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.rocket_contrib]
default-features = false
features = ["handlebars_templates", "json"]
